--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,58 @@
 		{%- endfor %}
 	</ul>
 
-	<footer>Les jeunes insoumis·es de Troyes | <a href="https://linktr.ee/jitroyes">liens</a></footer>
+	<!-- <footer>Les jeunes insoumis·es de Troyes | <a href="https://linktr.ee/jitroyes">liens</a></footer> -->
+	<footer>Les jeunes insoumis·es de Troyes
+		<div id=extLinks>
+			<a target=_blank href="https://actionpopulaire.fr/groupes/e5b88d81-1ec3-4c50-a2ff-7f180373177f/">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+					<title>Action populaire</title>
+					<circle cx="12" cy="11" r="2.5" />
+					<path
+						d="M6 4.5a8.5 8.5 0 0112 0 8.5 8.5 0 010 12l-5.4 5.4a.9.9 0 01-1.2 0L6 16.5a8.5 8.5 0 010-12ZM19.1 3.4C15.2-.5 8.9-.5 5 3.4 1.1 7.3 1.1 13.6 5 17.5l5.4 5.4a2.4 2.4 0 003.3 0l5.4-5.4C23 13.6 23 7.3 19.1 3.4Z">
+				</svg>
+			</a>
+			<a target="_blank" href="https://bsky.app/profile/jitroyes.bsky.social">
+				<svg viewBox="0 0 24 24">
+					<title>Bluesky</title>
+					<path
+						d="M3.2 1.5a2.5 2.5 0 00-1.6.2c-.5.2-.8.8-.9 1.2-.2.5-.2.9-.2 1.3s.1 1.7.3 3c.1.7.1 1.3.2 1.9.1.5.1 1 .2 1.2C1.7 12 3 13 4.5 13.5c-.6.3-1.2.7-1.6 1.2-.4.6-.6 1.4-.3 2.3.3.9.9 1.9 2 3.1 1.1 1.3 2.2 1.9 3.2 2 1.1.1 1.9-.4 2.5-1.1s1-1.6 1.4-2.5c.2-.4.3-.7.4-1a22 22 0 00.3.9c.3.8.7 1.7 1.3 2.4.6.7 1.4 1.2 2.4 1.1 1 0 2.2-.6 3.5-1.8 1-1 1.6-1.9 1.9-2.8.2-.8.1-1.6-.3-2.3-.4-.6-1-1.1-1.7-1.4 1.6-.4 3-1.4 3.5-3.2.1-.2.1-.7.2-1.2a65 65 0 00.2-1.9c.1-1.3.2-2.7.2-3 0-.4-.1-.8-.2-1.3-.1-.4-.4-1-.9-1.2a2.5 2.5 0 00-1.6-.2c-.8.1-1.7.5-2.9 1.4l.2.3L18 3c-1.3.9-2.7 2.3-3.8 3.7A27 27 0 0012 9.7 27 27 0 009.9 6.6C8.8 5.2 7.4 3.8 6.1 2.9 4.8 2 3.9 1.6 3.2 1.5Z" />
+				</svg>
+			</a>
+			<a target="_blank" href="https://github.com/jitroyes/">
+				<svg viewBox="0 0 24 24">
+					<title>Github</title>
+					<path
+						d="M12.5.75C6.146.75 1 5.896 1 12.25c0 5.089 3.292 9.387 7.863 10.91.575.101.79-.244.79-.546 0-.273-.014-1.178-.014-2.142-2.889.532-3.636-.704-3.866-1.35-.13-.331-.69-1.352-1.18-1.625-.402-.216-.977-.748-.014-.762.906-.014 1.553.834 1.769 1.179 1.035 1.74 2.688 1.25 3.349.948.1-.747.402-1.25.733-1.538-2.559-.287-5.232-1.279-5.232-5.678 0-1.25.445-2.285 1.178-3.09-.115-.288-.517-1.467.115-3.048 0 0 .963-.302 3.163 1.179.92-.259 1.897-.388 2.875-.388.977 0 1.955.13 2.875.388 2.2-1.495 3.162-1.179 3.162-1.179.633 1.581.23 2.76.115 3.048.733.805 1.179 1.825 1.179 3.09 0 4.413-2.688 5.39-5.247 5.678.417.36.776 1.05.776 2.128 0 1.538-.014 2.774-.014 3.162 0 .302.216.662.79.547C20.709 21.637 24 17.324 24 12.25 24 5.896 18.854.75 12.5.75Z" />
+				</svg>
+			</a>
+			<a target="_blank" href="https://www.facebook.com/people/Jitroyes-Lfi/61571488727153/">
+				<svg viewBox="0 0 24 24">
+					<title>Facebook</title>
+					<path
+						d="m12.8 24H1.3C.6 24 0 23.4 0 22.7V1.3C0 .6.6 0 1.3 0L22.7 0c.7 0 1.3.6 1.3 1.3V22.7c0 .7-.6 1.3-1.3 1.3H16.6V14.7h3.1l.5-3.6H16.6V8.8c0-1 .3-1.8 1.8-1.8h1.9V3.8c-.3 0-1.5-.1-2.8-.1-2.8 0-4.7 1.7-4.7 4.8v2.7H9.7v3.6h3.1v9.3z" />
+				</svg>
+			</a>
+			<a target="_blank" href="https://www.youtube.com/@JITroyes">
+				<svg viewBox="0 0 24 24">
+					<title>Youtube</title>
+					<path
+						d="m9.75 14.8 0-6.17c2.19 1.03 3.89 2.03 5.9 3.1-1.66.92-3.7 1.95-5.9 3.07m12.21-9.24c-.38-.5-1.02-.89-1.71-1.01-2.02-.38-14.59-.38-16.61 0-.55.1-1.04.35-1.46.74-1.77 1.65-1.22 10.47-.79 11.9.18.62.41 1.07.7 1.36.38.39.89.65 1.49.77 1.66.34 10.21.54 16.63.05.59-.1 1.12-.38 1.53-.78 1.64-1.64 1.53-10.96.21-13.03" />
+				</svg>
+			</a>
+			<a target="_blank" href="https://instagram.com/ji_troyes/">
+				<svg viewBox="0 0 24 24">
+					<title>Instagram</title>
+					<path fill-rule="evenodd" clip-rule="evenodd"
+						d="M12 18.5c3.6 0 6.5-2.9 6.5-6.5S15.6 5.5 12 5.5 5.5 8.4 5.5 12s2.9 6.5 6.5 6.5Zm0-2.1c2.4 0 4.4-2 4.4-4.4s-2-4.4-4.4-4.4-4.4 2-4.4 4.4 2 4.4 4.4 4.4Z" />
+					<circle cx="18.5" cy="5.5" r="1.5" />
+					<path fill-rule="evenodd" clip-rule="evenodd"
+						d="M.7 3.6C0 5 0 6.8 0 10.5v3c0 3.7 0 5.5.7 6.9.6 1.3 1.6 2.3 2.9 2.9 1.4.7 3.2.7 6.9.7h3c3.7 0 5.5 0 6.9-.7 1.3-.6 2.3-1.6 2.9-2.9.7-1.4.7-3.2.7-6.9v-3c0-3.7 0-5.5-.7-6.9-.6-1.3-1.6-2.3-2.9-2.9C19 0 17.2 0 13.5 0h-3C6.8 0 5 0 3.6.7 2.3 1.3 1.3 2.3.7 3.6ZM13.5 2.2h-3c-1.9 0-3.2 0-4.1.1-1 0-1.5.2-1.8.4-.9.4-1.5 1-1.9 1.9-.2.3-.4.8-.4 1.8-.1.9-.1 2.2-.1 4.1v3c0 1.9 0 3.2.1 4.1 0 1 .2 1.5.4 1.8.4.9 1 1.5 1.9 1.9.3.2.8.4 1.8.4.9.1 2.2.1 4.1.1h3c1.9 0 3.2 0 4.1-.1 1 0 1.5-.2 1.8-.4.9-.4 1.5-1 1.9-1.9.2-.3.4-.8.4-1.8.1-.9.1-2.2.1-4.1v-3c0-1.9 0-3.2-.1-4.1 0-1-.2-1.5-.4-1.8-.4-.9-1-1.5-1.9-1.9-.3-.2-.8-.4-1.8-.4-.9-.1-2.2-.1-4.1-.1Z" />
+				</svg>
+			</a>
+		</div>
+	</footer>
+
 </body>
 
 </html>
