--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ footer {
 	padding: 1ex 2ex;
 	background: #7b13d6;
 	color: white;
+	font-weight: bold;
 }
 
 ul#links {
@@ -107,4 +108,19 @@ ul#links {
 	border: solid .3ex #7b13d6;
 	list-style: none;
 	padding: .3ex;
+}
+
+#extLinks {
+	display: flex;
+	width: 100%;
+	flex-direction: row;
+	justify-content: flex-start;
+	gap: 2em;
+	margin-top: 1ex;
+}
+
+#extLinks svg {
+	display: block;
+	width: 2em;
+	fill: white;
 }
