--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ footer {
 	background: #7b13d6;
 	color: white;
 	font-weight: bold;
+	text-align: center;
 }
 
 ul#links {
@@ -114,7 +115,7 @@ ul#links {
 	display: flex;
 	width: 100%;
 	flex-direction: row;
-	justify-content: flex-start;
+	justify-content: center;
 	gap: 2em;
 	margin-top: 1ex;
 }
